pkg/front_end/testcases/inference/instantiate_tearoff_of_call.dart.strong.transformed.expect
library test /*isLegacy*/;
//
// Problems in library:
//
// pkg/front_end/testcases/inference/instantiate_tearoff_of_call.dart:5:1: Error: Library doesn't support null safety.
// // @dart=2.9
// ^^^^^^^^^^^^
//
// pkg/front_end/testcases/inference/instantiate_tearoff_of_call.dart:12:12: Error: A value of type 'T Function<T>(T)' can't be assigned to a variable of type 'int Function(int)'.
//   func = f.call;
//            ^
//
import self as self;
import "dart:core" as core;

static method test(<T extends core::Object* = dynamic>(T*) →* T* f) → void {
  (core::int*) →* core::int* func;
  func = invalid-expression "pkg/front_end/testcases/inference/instantiate_tearoff_of_call.dart:12:12: Error: A value of type 'T Function<T>(T)' can't be assigned to a variable of type 'int Function(int)'.
  func = f.call;
           ^" in f as{TypeError,ForLegacy} (core::int*) →* core::int*;
}
static method main() → dynamic {}
